@@ -1,3 +1,9 @@
+2001-04-30  Sam Steingold  <sds@gnu.org>
+
+	* compiler.lisp (test-argument-syntax): call C-WARN and return NIL
+	on WRONG-KEY, instead of calling C-ERROR
+	(*deprecated-functions-list*): added GET-SETF-METHOD-MULTIPLE-VALUE
+
 2001-04-25  Sam Steingold  <sds@gnu.org>
 
 	* runprog.lisp (run-shell-command, run-program): accept :wait
